feat: added role verification